# openbot001

./: .gitignore  README.md  pyproject.toml
docs/: changelog.md  design.md  progress.md
docs/vibe-coding/: .initialized
skills/weather/: SKILL.md  tools.py
src/bot001/: __init__.py  agent.py  config.py  console.py  executor.py  logger.py  message.py  session.py
src/bot001/knowledge/: __init__.py  store.py  wiki.py
src/bot001/memory/: long_term.py  short_term.py
src/bot001/skills/: base.py  loader.py
src/bot001/tools/: builtin.py  registry.py
tests/: conftest.py  test_agent.py  test_builtin.py  test_coverage.py  test_knowledge.py  test_memory.py  test_skills.py  test_smoke.py
