[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bot001"
version = "0.1.0"
description = "轻量级 Console Agent 框架，支持工具调用、记忆和知识库检索"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
bot001 = "bot001.console:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bot001"]
